Replaces the default font with Lato.

--- a/_includes/css/screen.css
+++ b/_includes/css/screen.css
@@ -18,7 +18,7 @@ body {
 
 h1, h2, h3, h4, h5, h6 {
   color: #181818;
-  font-family: "open sans", sans-serif;
+  font-family: "Lato", sans-serif;
   font-weight: 600;
 }
 
@@ -144,7 +144,7 @@ nav hr {
 
 .sidebar {
   padding-top: 25px;
-  font-family: "open sans", sans-serif;
+  font-family: "Lato", sans-serif;
 }
 
 .sidebar p {
@@ -156,7 +156,7 @@ nav hr {
 }
 
 .content {
-  font: 400 16px/22px "open sans", sans-serif;
+  font: 400 16px/22px "Lato", sans-serif;
   border-left: 1px solid #DDD;
   padding-left: 40px;
   padding-top: 25px;
@@ -210,7 +210,7 @@ nav hr {
 }
 
 i.fa-hn {
-  font-family: "open sans", sans-serif;
+  font-family: "Lato", sans-serif;
   text-align: center;
   font-size: 18px !important;
   position: relative;
