Adds profile picture to the sidebar.

--- a/_includes/css/screen.css
+++ b/_includes/css/screen.css
@@ -184,6 +184,17 @@ nav hr {
 }
 
 #logo {
+  display: block;
+  width: 100px;
+  height: 100px;
+  border-radius: 150px;
+  -webkit-border-radius: 150px;
+  -moz-border-radius: 150px;
+  background: url(../../../logo.jpg) no-repeat;
+  box-shadow: 0 0 8px rgba(0, 0, 0, .8);
+  -webkit-box-shadow: 0 0 8px rgba(0, 0, 0, .8);
+  -moz-box-shadow: 0 0 8px rgba(0, 0, 0, .8);
+  margin-left: 56px;
   margin-bottom: 25px;
 }
 
