--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,9 +1,7 @@
 <nav>
   <h1>Hi.</h1>
-  <a href="/">
-    <img src="/logo.png" id="logo" alt="Blog logo"/>
-  </a>
-  <h2>I'm <a href="/">{{ site.theme.name }}</a>.</h2>
+  <div id="logo"></div>
+  <h2>I'm <a href="/">Enrico</a>.</h2>
   <hr/>
   <ul>
   <p>A brief bio or something witty.</p>
