--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,7 +12,7 @@
   <meta name="description" content="The blog of {{ site.theme.name }}" />
   <link rel="canonical" href="{{ site.url }}{{ page.url | replace:'index.html','' }}" />
 
-  <link rel="shortcut icon" href="/favicon.png">
+  <link rel="shortcut icon" href="/favicon.ico">
   <link rel="alternate" type="application/rss+xml" title="megakemp.com" href="http://feeds.feedburner.com/thoughtology?format=xml" />
 
   <link rel="stylesheet" href="/css/main.css">
