--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -11,6 +11,10 @@ layout: default
 
 <h1 class="title">{{ page.title }}</h1>
 
+<div id="summary">
+    {{ page.summary }}
+</div>
+
 <div id="post">
   {{ content }}
 </div>
