Adds short bio to the sidebar.

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -4,9 +4,10 @@
   <h2>I'm <a href="/">Enrico</a>.</h2>
   <hr/>
   <ul>
-  <p>A brief bio or something witty.</p>
-  <p>
-    Edit me in <code>_includes/sidebar.html</code>
+  <p>Italian programmer in Sweden.<br/>
+  <a href="http://lanyrd.com/profile/ecampidoglio">Speaker</a> and technical trainer.<br/>
+  <a href="https://github.com/AutoFixture">AutoFixture</a> core member.<br/>
+  <a href="http://deskthority.net/wiki/Main_Page">Mechanical keyboards</a> fanatic.
   </p>
   <hr/>
   <div>
