--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -19,6 +19,11 @@ layout: default
   {{ content }}
 </div>
 
+<div id="comments">
+  <i class="fa fa-comment"></i>
+  <a href="{{ page.url }}#disqus_thread"></a>
+</div>
+
 <div id="related">
   <h3>Related Posts</h3>
   <ul class="posts">
@@ -30,3 +35,18 @@ layout: default
   </ul>
 </div>
 
+<div id="disqus_thread"></div>
+<script type="text/javascript">
+  var disqus_shortname = 'megakemp';
+  var disqus_url = '{{ site.url }}{{ page.url | replace:'index.html','' }}';
+
+  (function() {
+    var dsq = document.createElement('script');
+    dsq.type = 'text/javascript';
+    dsq.async = true;
+    dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
+    (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+  })();
+</script>
+<noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+<a href="http://disqus.com" class="dsq-brlink">comments powered by <span class="logo-disqus">Disqus</span></a>
