--- a/_includes/css/screen.css
+++ b/_includes/css/screen.css
@@ -218,6 +218,10 @@ nav hr {
   overflow: hidden;
   float: left;
   color: #555;
+  transition: all 0.2s ease-in;
+  -webkit-transition: all 0.2s ease-in;
+  -moz-transition: all 0.2s ease-in;
+  -o-transition: all 0.2s ease-in;
 }
 
 #stalker i {
