Pushes the comments count down a bit.

--- a/_includes/css/screen.css
+++ b/_includes/css/screen.css
@@ -157,6 +157,7 @@ nav hr {
 
 #comments i {
   font-size: 23px;
+  margin-top: 20px;
   margin-right: 5px;
   color: {{ site.theme.highlight_color }};
 }
