Correctly shows the Disqus comment count.

--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -1,5 +1,6 @@
 <script type="text/javascript">
   var disqus_shortname = 'megakemp';
+  var disqus_url = '{{ site.url }}{{ page.url | replace:'index.html','' }}';
 
   (function () {
     var s = document.createElement('script');
