--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -30,7 +30,7 @@ layout: default
 
 <div id="comments">
   <i class="fa fa-comment"></i>
-  <a href="{{ page.url }}#disqus_thread"></a>
+  <a href="{{ site.url }}{{ page.url }}#disqus_thread"></a>
 </div>
 
 <div id="related">
