--- a/_includes/css/screen.css
+++ b/_includes/css/screen.css
@@ -64,6 +64,21 @@ a:visited {
 table {
   font-size: inherit;
   font: 100%;
+  width: 90%;
+  border-collapse: collapse;
+  border-style: hidden;
+  margin: 10px auto 10px auto;
+}
+
+table th {
+  font-weight: 600;
+  border: 1px solid silver;
+  padding: 5px;
+}
+
+table td {
+  border: 1px solid silver;
+  padding: 5px;
 }
 
 img {
