Increases indentation of the posts list.

--- a/_includes/css/screen.css
+++ b/_includes/css/screen.css
@@ -88,8 +88,9 @@ img {
 }
 
 ul.posts {
-  margin-top: 0;
   list-style-type: none;
+  margin-left: 20px;
+  margin-top: 0;
   margin-bottom: 10px;
 }
 
