--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,6 +7,10 @@
   {% endif %}
 
   <p>
+    {% include license.html %}
+  </p>
+
+  <p>
     © {{ site.theme.name }}, 2014 &mdash; built with Jekyll using Lagom theme
   </p>
 </div>
