--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,7 +1,7 @@
 <nav>
   <h1>Hi.</h1>
   <div id="logo"></div>
-  <h2>I'm <a href="/">Enrico</a>.</h2>
+  <h2>I'm <a href="/about">Enrico</a>.</h2>
   <hr/>
   <ul>
   <p>Italian programmer in Sweden.<br/>
