Adds top bar for the main sections.

--- a/_includes/css/screen.css
+++ b/_includes/css/screen.css
@@ -13,7 +13,37 @@ body {
   color: #222222;
   line-height: 24px;
   margin: 0;
-  border-top: 7px solid {{ site.theme.base_color }};
+  border-top: 25px solid {{ site.theme.base_color }};
+  box-shadow: inset 0 6px 5px -5px rgba(0,0,0,0.8);
+}
+
+#topbar {
+  margin-top: -63px;
+  margin-bottom: 63px;
+}
+
+#topbar ul li {
+  float: right;
+  list-style: none;
+  text-align: right;
+  margin-left: 21px;
+  font-size: 90%;
+  letter-spacing: 0.7px;
+  color: #fff;
+  text-shadow: 0 -1px 0 rgba(0,0,0,0.4);
+}
+
+#topbar a {
+  color: #fff;
+  transition: all 0.2s ease-in;
+  -webkit-transition: all 0.2s ease-in;
+  -moz-transition: all 0.2s ease-in;
+  -o-transition: all 0.2s ease-in;
+}
+
+#topbar a:hover {
+  text-decoration: none;
+  color: {{ site.theme.highlight_color }};
 }
 
 h1, h2, h3, h4, h5, h6 {
