--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,6 +26,13 @@
     </div>
 
     <div class="eleven columns content">
+      <div id="topbar">
+        <ul>
+          <li><a href="/speaking">speaking</a></li>
+          <li><a href="/">blog</a></li>
+          <li><a href="/about">about</a></li>
+        </ul>
+      </div>
       {{ content }}
 
       <div class="footer">
