Updates link to speaking page in sidebar.

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -5,7 +5,7 @@
   <hr/>
   <ul>
   <p>Italian programmer in Sweden.<br/>
-  <a href="http://lanyrd.com/profile/ecampidoglio">Speaker</a> and technical trainer.<br/>
+  <a href="/speaking">Speaker</a> and technical trainer.<br/>
   <a href="https://github.com/AutoFixture">AutoFixture</a> core member.<br/>
   <a href="http://deskthority.net/wiki/Main_Page">Mechanical keyboards</a> fanatic.
   </p>
