Renames /tags to /tag not to break the permalinks.

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,7 +7,7 @@ layout: default
   <span id="meta-categories">
     Posted in
     {% for category in page.categories %}
-      <a href="/tags/{{ category }}">{{ category }}</a>
+      <a href="/tag/{{ category }}">{{ category }}</a>
       {% if forloop.last == false %}
         &nbsp;|&nbsp;
       {% endif %}
