--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -21,14 +21,14 @@ layout: default
 <h1 class="title">{{ page.title }}</h1>
 
 <div id="summary">
-    {{ page.summary }}
+  {{ page.summary }}
 </div>
 
 <div id="post">
   {{ content }}
 </div>
 
-<div id="comments">
+<div class="comments">
   <i class="fa fa-comment"></i>
   <a href="{{ site.url }}{{ page.url }}#disqus_thread"></a>
 </div>
