Adds links to the post on mechanical keyboards.

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -7,7 +7,7 @@
   <p>Italian programmer in Sweden.<br/>
   <a href="/speaking">Speaker</a> and technical trainer.<br/>
   <a href="https://github.com/AutoFixture">AutoFixture</a> core member.<br/>
-  <a href="http://deskthority.net/wiki/Main_Page">Mechanical keyboards</a> fanatic.
+  <a href="http://megakemp.com/2014/05/09/a-gentle-introduction-to-mechanical-keyboards">Mechanical keyboards</a> fanatic.
   </p>
   <hr/>
   <div>
