Adds link to Best Of in the header.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,6 +31,7 @@
       <div id="topbar">
         <ul>
           <li><a href="/speaking">speaking</a></li>
+          <li><a href="/bestof">best of</a></li>
           <li><a href="/">blog</a></li>
           <li><a href="/about">about</a></li>
         </ul>
