Makes the footnotes smaller.

--- a/_includes/css/screen.css
+++ b/_includes/css/screen.css
@@ -495,8 +495,9 @@ i.fa-hn {
 }
 
 .footnotes {
-  font-size: 14px;
+  font-size: 13px;
   font-style: italic;
+  line-height: 18px;
 }
 
 .icon-overlay {
