--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,6 +6,8 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  <meta http-equiv="Cache-control" content="public">
+  <meta http-equiv="Cache-control" content="max-age=2592000">
   <title>{{ page.title }}</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="author" content="{{ site.theme.name }}" />
