--- a/_includes/css/base.css
+++ b/_includes/css/base.css
@@ -87,7 +87,7 @@
           position: relative;
           top: -0.3em;
         }
-        sup a {
+        .footnote {
           color: #FFF !important;
           text-decoration: none !important;
           font-weight: 600;
@@ -100,7 +100,7 @@
           -moz-transition: all 0.2s ease-in;
           -o-transition: all 0.2s ease-in;
         }
-        sup a:hover {
+        .footnote:hover {
           background-color: {{ site.theme.highlight_color }};
         }
 
