--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,6 +21,8 @@
   <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Lato:400,700,400italic" type="text/css">
   <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.1/css/font-awesome.min.css">
 
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+
   {% include analytics.html %}
 </head>
 <body>
