Adds support for footnote popovers.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,6 +24,8 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 
   {% include analytics.html %}
+
+  {% include footnotes.html %}
 </head>
 <body>
   <div class="container">
