--- a/_includes/footnotes.html
+++ b/_includes/footnotes.html
@@ -1,3 +1,4 @@
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 <script src="/js/bigfoot.min.js"></script>
 <script>
   $.bigfoot();
