Includes the footnote popovers only on post pages.

--- a/_includes/footnotes.html
+++ b/_includes/footnotes.html
@@ -1,5 +1,7 @@
+{% if page.layout == 'post' or page.url == '/' %}
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 <script src="/js/bigfoot.min.js"></script>
 <script>
   $.bigfoot();
 </script>
+{% endif %}
