Adds styling for the <kbd> element.

--- a/_includes/css/base.css
+++ b/_includes/css/base.css
@@ -332,6 +332,24 @@
 		font-size: 13px;
 		color: #444; }
 
+/* #Kbd
+================================================== */
+    kbd {
+        background-color: #f7f7f7;
+        border: 1px solid #ccc;
+        border-radius: 3px;
+        box-shadow: 0 1px 0px rgba(0,0,0,0.2),0 0 0 2px #fff inset;
+        color: #333;
+        display: inline-block;
+        font-family: Arial, Helvetica, sans-serif;
+        font-size: 11px;
+        line-height: 1.2;
+        margin: 0 0.1em;
+        padding: 0.1em 0.6em;
+        text-shadow: 0 1px 0 #fff;
+        white-space: nowrap
+    }
+
 /* #Misc
 ================================================== */
 	.remove-bottom { margin-bottom: 0 !important; }
