Renames the 'theme' config option to 'style'.
As of Jekyll 3.2.1 'theme' is a reserved keyword,
so it can no longer be used as a configuration option.

https://github.com/jekyll/jekyll/issues/5163#issuecomment-236320771

--- a/_includes/css/base.css
+++ b/_includes/css/base.css
@@ -101,7 +101,7 @@
           -o-transition: all 0.2s ease-in;
         }
         .footnote:hover {
-          background-color: {{ site.theme.highlight_color }};
+          background-color: {{ site.style.highlight_color }};
         }
         .fa.pull-left-three-lines {
           line-height: 2;
