--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,8 +10,8 @@
   <meta http-equiv="Cache-control" content="max-age=2592000">
   <title>{{ page.title }}</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="author" content="{{ site.theme.name }}" />
-  <meta name="description" content="The blog of {{ site.theme.name }}" />
+  <meta name="author" content="{{ site.style.name }}" />
+  <meta name="description" content="The blog of {{ site.style.name }}" />
   <link rel="canonical" href="{{ site.url }}{{ page.url | replace:'index.html','' }}" />
 
   <link rel="shortcut icon" href="/favicon.ico">
