--- a/_includes/css/footnotes.css
+++ b/_includes/css/footnotes.css
@@ -30,15 +30,15 @@
 .bigfoot-footnote__button:focus {
   outline: none;
   border: none;
-  background-color: {{ site.theme.highlight_color }};
+  background-color: {{ site.style.highlight_color }};
 }
 
 .bigfoot-footnote__button:active {
-  background-color: {{ site.theme.highlight_color }};
+  background-color: {{ site.style.highlight_color }};
 }
 
 .bigfoot-footnote__button.is-active {
-  background-color: {{ site.theme.highlight_color }};
+  background-color: {{ site.style.highlight_color }};
   -webkit-transition-delay: 0.1s;
   transition-delay: 0.1s;
 }
@@ -94,7 +94,7 @@
   background: #fafafa;
   opacity: 0;
   border-radius: 0.5em;
-  border: 4px solid {{ site.theme.highlight_color }};
+  border: 4px solid {{ site.style.highlight_color }};
   -webkit-box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.3);
   box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.3);
   line-height: 0;
@@ -280,7 +280,7 @@
   -ms-transform: rotate(45deg);
   transform: rotate(45deg);
   background: #fafafa;
-  border: 4px solid {{ site.theme.highlight_color }};
+  border: 4px solid {{ site.style.highlight_color }};
   -webkit-box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.3);
   box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.3);
   border-top-left-radius: 0;
