--- a/_includes/css/screen.css
+++ b/_includes/css/screen.css
@@ -13,7 +13,7 @@ body {
   color: #222222;
   line-height: 24px;
   margin: 0;
-  border-top: 25px solid {{ site.theme.base_color }};
+  border-top: 25px solid {{ site.style.base_color }};
   box-shadow: inset 0 6px 5px -5px rgba(0,0,0,0.8);
 }
 
@@ -43,7 +43,7 @@ body {
 
 #topbar a:hover {
   text-decoration: none;
-  color: {{ site.theme.highlight_color }};
+  color: {{ site.style.highlight_color }};
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -76,7 +76,7 @@ h1.backdrop {
   background-position: center center;
   background-repeat: no-repeat;
   background-size: 100% auto;
-  color: {{ site.theme.highlight_color }};
+  color: {{ site.style.highlight_color }};
   line-height: 335px;
   padding-left: 23px;
   margin-bottom: 20px;
@@ -105,17 +105,17 @@ ul {
 }
 
 a {
-  color: {{ site.theme.highlight_color }};
+  color: {{ site.style.highlight_color }};
   text-decoration: none;
 }
 
 a:hover {
-  color: {{ site.theme.highlight_color }};
+  color: {{ site.style.highlight_color }};
   text-decoration: underline;
 }
 
 a:visited {
-  color: {{ site.theme.highlight_color }};
+  color: {{ site.style.highlight_color }};
 }
 
 a.pagination-title {
@@ -393,7 +393,7 @@ p.thumbnail-caption {
 }
 
 #post blockquote {
-  border-left: 3px solid {{ site.theme.highlight_color }};
+  border-left: 3px solid {{ site.style.highlight_color }};
 }
 
 #post pre {
@@ -440,7 +440,7 @@ div.comments i {
   font-size: 23px;
   margin-top: 5px;
   margin-right: 5px;
-  color: {{ site.theme.highlight_color }};
+  color: {{ site.style.highlight_color }};
 }
 
 .sidebar {
@@ -481,7 +481,7 @@ div.comments i {
 }
 
 #home h2 {
-  color: {{ site.theme.highlight_color }};
+  color: {{ site.style.highlight_color }};
 }
 
 #logo {
@@ -523,7 +523,7 @@ div.comments i {
 
 #stalker a:hover {
   text-decoration: none;
-  color: {{ site.theme.highlight_color }};
+  color: {{ site.style.highlight_color }};
 }
 
 i.fa-hn {
