--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,7 @@
 <div class="disclaimer">
-  {% if site.theme.show_disclaimer %}
+  {% if site.style.show_disclaimer %}
   <p>
-    The postings on this site are my own and don't necessarily represent my 
+    The postings on this site are my own and don't necessarily represent my
     employer’s positions, strategies or opinions.
   </p>
   {% endif %}
@@ -11,6 +11,6 @@
   </p>
 
   <p>
-    © {{ site.theme.name }}, 2016 &mdash; built with Jekyll using Lagom theme
+    © {{ site.style.name }}, 2016 &mdash; built with Jekyll using Lagom theme
   </p>
 </div>
