--- a/_includes/css/syntax.css
+++ b/_includes/css/syntax.css
@@ -67,4 +67,4 @@
 .highlight .il { color: #009999; }
 .highlight .gc { color: #999; background-color: #EAF2F5; }
 pre { white-space: pre; overflow: auto; }
-code, pre { font-family: Consolas,Monaco,Menlo,"Courier New",monospace; }
+code, pre { font-family: Inconsolata,Consolas,Monaco,Menlo,"Courier New",monospace; }
