--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,7 +18,7 @@
   <link rel="alternate" type="application/rss+xml" title="megakemp.com" href="http://feeds.feedburner.com/thoughtology?format=xml" />
 
   <link rel="stylesheet" href="/css/main.css">
-  <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Lato:400,700,400italic" type="text/css">
+  <link href="https://fonts.googleapis.com/css?family=Montserrat:300,600|Open+Sans:700|Roboto:300|Inconsolata" rel="stylesheet">
   <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.1/css/font-awesome.min.css">
 
   {% include analytics.html %}
