--- a/_includes/css/screen.css
+++ b/_includes/css/screen.css
@@ -342,6 +342,10 @@ p.thumbnail-caption {
   padding: 10px;
 }
 
+.note i.fa {
+  padding-bottom: .5em;
+}
+
 .note.oneline p {
   margin: 0 !important;
   padding: 20px;
