--- a/_includes/css/screen.css
+++ b/_includes/css/screen.css
@@ -425,7 +425,8 @@ p.thumbnail-caption {
 #post code {
   border: 1px solid #ddd;
   background-color: #f8f8f8;
-  padding: .2em
+  padding: .2em;
+  line-height: 25px;
 }
 
 #post pre code {
