Increases the margin before and after an inline image.

--- a/_includes/css/screen.css
+++ b/_includes/css/screen.css
@@ -151,6 +151,11 @@ img {
   margin-right: auto;
 }
 
+p img {
+  display: block;
+  margin: 50px auto;
+}
+
 span.tag-icon {
   color: #555;
   font-size: 70%;
