--- a/_includes/license.html
+++ b/_includes/license.html
@@ -1,6 +1,6 @@
 <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">
   <img alt="Creative Commons License"
-       style="border-width:0; display:block; margin-left:auto; margin-right:auto;"
+       style="border-width:0; display:block; margin:0 auto;"
        src="http://i.creativecommons.org/l/by/4.0/80x15.png" />
 </a>
 <span xmlns:dct="http://purl.org/dc/terms/" property="dct:title">
