Shows the excerpt in Open Graph and Twitter Cards

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,9 +14,9 @@
   <meta name="twitter:title" content="{{ page.title }}" />
   <meta property="og:title" content="{{ page.title }}" />
   <meta property="og:url" content="{{ site.url }}{{ page.url | replace:'index.html','' }}" />
-  {% if page.summary %}
-  <meta property="og:description" content="{{ page.summary }}" />
-  <meta name="twitter:description" content="{{ page.summary }}" />
+  {% if page.excerpt %}
+  <meta property="og:description" content="{{ page.excerpt | strip_html | strip_newlines }}" />
+  <meta name="twitter:description" content="{{ page.excerpt | strip_html | strip_newlines }}" />
   {% endif %}
   {% if page.image %}
   <meta property="og:image" content="{{ site.url }}/assets/{{ page.assets }}/{{ page.image }}" />
