Rewrites the presentations section in the speaking page

--- a/_includes/css/layout.css
+++ b/_includes/css/layout.css
@@ -48,6 +48,9 @@
 	.thumbnail-image {
 		display: none;
 	}
+	.thumbnail-video {
+		display: none;
+	}
 	.thumbnail-container {
 		height: 100%;
 	}
